# DigitalCurling3-Server

./: CMakeLists.txt  README.md
src/: config.cpp  config.hpp  game.cpp  game.hpp  log.cpp  log.hpp  main.cpp  server.cpp  server.hpp  tcp_session.cpp  tcp_session.hpp  trajectory_compressor.cpp  trajectory_compressor.hpp  util.cpp  util.hpp  version.cpp.in  version.hpp
